[project]
name = "cotacaodolarbcbilumimais"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "selenium (>=4.35.0,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pygetwindow (>=0.0.9,<0.0.10)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "camelot-py[cv] (>=1.0.9,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pywinauto (>=0.6.9,<0.7.0)",
    "pyxlsb (>=1.0.10,<2.0.0)"
]

[tool.poetry]
packages = [{include = "cotacaodolarbcbilumimais", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.16"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.16.12"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules" 

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
doc  = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x -vv --cov=cotacaodolarbcbilumimais"
post_test = "coverage html"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
